kubernetes/prerender/dev/prerender-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prerender
  name: prerender
  namespace: dev
spec:
  ports:
  - name: prerender
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: prerender
